<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">james_s_application3</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_60">60</string>
    <string name="msg_click_button_to">Click button to return to your account</string>
    <string name="lbl_enter_name">Enter Name</string>
    <string name="lbl_height">Height</string>
    <string name="lbl_60_100">60/100</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account? Sign Up</string>
    <string name="lbl_breathing_rate2">Breathing Rate</string>
    <string name="msg_confirm_passwor">Confirm Password</string>
    <string name="lbl_edit_image">edit image</string>
    <string name="lbl2">|</string>
    <string name="lbl_12_00">12:00</string>
    <string name="lbl_phone">Phone #:</string>
    <string name="lbl_date_of_birth">Date of birth</string>
    <string name="msg_already_have_an">Already have an account? Sign In</string>
    <string name="msg_heart_rate_vari">Heart Rate Variability (HRV)</string>
    <string name="lbl_06_00">06:00</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="msg_are_you_sure_ab">Are you sure about deleting your account? If so, click the button below.</string>
    <string name="msg_skin_temperatur">Skin Temperature</string>
    <string name="lbl_50">50</string>
    <string name="msg_nfc_closer_to_d">NFC closer to device.</string>
    <string name="lbl_contact">Contact</string>
    <string name="lbl_type_a">"Type A+"</string>
    <string name="lbl_welcome2">Welcome</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_john">john</string>
    <string name="lbl_ms">ms</string>
    <string name="lbl_breathing_rate">Breathing 
Rate</string>
    <string name="lbl_932">93</string>
    <string name="lbl_94_5">94.5</string>
    <string name="msg_medical_conditi">Medical Conditions</string>
    <string name="lbl_250">250</string>
    <string name="lbl_f">F</string>
    <string name="lbl_start">Start</string>
    <string name="lbl_medications">Medications</string>
    <string name="msg_don_t_have_an_a2">Don\u2019t have an account?</string>
    <string name="lbl_weight">Weight</string>
    <string name="lbl_mmhg">mmhg</string>
    <string name="lbl_18_00">18:00</string>
    <string name="lbl_edit_details">Edit Details</string>
    <string name="msg_today_8_may_1">today, 8 may, 12:51</string>
    <string name="msg_already_have_an2">Already have an account?</string>
    <string name="lbl_welcome">WELCOME</string>
    <string name="lbl_1_555_555_5555">+1(555)555-5555</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_yesterday">Yesterday</string>
    <string name="lbl_genders">genders</string>
    <string name="lbl_000lbs">000lbs</string>
    <string name="lbl_enter_password">Enter Password</string>
    <string name="lbl_95_5">95.5</string>
    <string name="msg_i_e_ibuprofen">i.e. ibuprofen, dialysis, etc </string>
    <string name="msg_you_are_ready_t">You are ready to get started. </string>
    <string name="msg_blood_oxygen_sa2">Blood Oxygen
Saturation</string>
    <string name="msg_blood_oxygen_sa">Blood Oxygen Saturation</string>
    <string name="lbl_100">100</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_your_vitals">Your Vitals</string>
    <string name="lbl_blood_type">Blood Type</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_0_0">"0'0""</string>
    <string name="lbl_93">93%</string>
    <string name="lbl_90">90 </string>
    <string name="lbl_91">91</string>
    <string name="lbl_97">97</string>
    <string name="lbl_94">94</string>
    <string name="msg_skin_temperatu">Skin 
Temperature</string>
    <string name="lbl_sign_up"> Sign Up</string>
    <string name="lbl_sign_up2">Sign Up</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_back_to_home">Back to Home</string>
    <string name="lbl_name2">Name:</string>
    <string name="msg_add_emergency_c">Add Emergency Contact</string>
    <string name="lbl_relation">Relation:</string>
    <string name="lbl">%</string>
    <string name="msg_i_e_ibuprofen2">i.e. ibuprofen, dialysis , etc</string>
    <string name="lbl_14_06">14:06</string>
    <string name="lbl_85">85</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_0">0</string>
    <string name="msg_heart_rate_var">Heart Rate 
Variability
(HRV)</string>
    <string name="lbl_88">88</string>
    <string name="msg_mint_health_dat">MINT Health Data Management</string>
    <string name="lbl_200">200</string>
    <string name="lbl_00_00_0000">00/00/0000</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_delete_now">Delete Now</string>
    <string name="lbl_nfc">NFC</string>
    <string name="lbl_press_and_get">Press and get </string>
    <string name="lbl_other">Other</string>
    <string name="lbl_welcome_back">Welcome back, </string>
    <string name="msg_emergency_conta">Emergency Contacts </string>
    <string name="msg_current_or_prev">Current or previous medical conditions</string>
    <string name="lbl_delete_account">Delete Account</string>
    <string name="lbl_1002">/100</string>
    <string name="lbl_1003">100%</string>
    <string name="lbl_150">150</string>
    <string name="msg_please_enter_valid_pa">Please enter valid password</string>
    <string name="msg_please_enter_valid_text">Please enter valid text</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
</resources>
